--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "history": "^4.6.3",
+    "lodash": "^4.17.4",
     "material-ui": "^0.20.0",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
@@ -38,6 +39,7 @@
     "prop-types": "^15.5.8",
     "quagga": "^0.12.1",
     "react": "^16.0.0",
+    "react-bubble-chart": "^0.4.0",
     "react-circular-progressbar": "^0.6.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.2",
